# rust-learn

./: .gitignore  .rustfmt.toml  Cargo.toml
advanced_features/src/: main.rs
base_type/: Cargo.toml
base_type/src/: main.rs
closures_demo/: Cargo.toml
closures_demo/src/: main.rs
collect/src/: main.rs
command_line_tool/: Cargo.toml  README.md
command_line_tool/src/: lib.rs  main.rs
concurrency/src/: main.rs
cycle/: Cargo.toml
cycle/src/: main.rs
eliminate_duplicate_code/: Cargo.toml
eliminate_duplicate_code/src/: main.rs
enum_demo/src/: main.rs
error_handle/: Cargo.toml
error_handle/src/: main.rs
function/src/: main.rs
generic/src/: main.rs
guessing_game/: README.md
guessing_game/src/: main.rs
hello_cargo/: README.md
hello_macro_tool/: Cargo.toml
hello_macro_tool/hello_macro_derive/: Cargo.toml
hello_macro_tool/pancakes/: Cargo.toml
hello_world/: README.md  main
iterator/src/: main.rs
life_cycle/: Cargo.toml
life_cycle/src/: main.rs
match_demo/src/: main.rs
module_demo/: Cargo.toml
module_demo/src/: front_of_house.rs  lib.rs  main.rs  some.rs
object_faces_in_rust/: Cargo.toml
object_faces_in_rust/src/: main.rs
ownership/src/: main.rs
pattern_matching/src/: main.rs
publish/: Cargo.toml
publish/src/: lib.rs  main.rs
quoting_and_borrowing/: Cargo.toml
quoting_and_borrowing/src/: main.rs
rust_web_server/: 404.html  Cargo.toml  hello.html
rust_web_server/src/: lib.rs  main.rs
slice/src/: main.rs
src/: lib.rs
struct_rect_demo/: Cargo.toml
workspaces/: Cargo.toml
write_test/: Cargo.toml
(+31 files in other folders)
